release(Fenstergröße)
feat():
fix(): 1240x768 als Minimalgröße festgelegt
refactor(ui):